--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "eqk8S8GB6fj8",
+    "database": "burger_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
@@ -14,6 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
